[project]
name = "jiken"
version = "0.1.0"
description = "jiken - Where 地 (ji/land) meets 検証 (kensho/verification). Verify land values with official data from Japan's MLIT."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "ty>=0.0.13",
    "vulture>=2.11",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "parameterized>=0.9.0",
    "yamllint>=1.35.0",
    "yamlfix>=1.16.0",
]

[project.urls]
Homepage = "https://github.com/lfworks/jiken"
Repository = "https://github.com/lfworks/jiken"
Issues = "https://github.com/lfworks/jiken/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jiken"]

# Ruff configuration
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/*" = ["ARG"]  # Allow unused arguments in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src/jiken",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# Vulture configuration
[tool.vulture]
min_confidence = 80

# Ty configuration
[tool.ty]
# ty is a fast type checker from Astral
# It will use type hints to check your code

# Yamlfix configuration
[tool.yamlfix]
line_length = 120
indent_mapping = 2
indent_sequence = 2
indent_offset = 0
allow_duplicate_keys = false
preserve_quotes = false
